# boilerplate-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  flake.nix  pyproject.toml
ci/: Dockerfile  cloud-build.yaml  cloud-run.yaml  cloudbuild.yaml  cloudrun.yaml  skaffold.yaml
db/: alembic.ini  env.py
docs/: architecture.md  configuration.md  database.md  deployment.md  development.md  getting_started.md  observability.md
src/: main.py
src/dependencies/: __init__.py  config.py  database.py  http_client.py  logger.py  tracer.py
src/exceptions/: __init__.py  base_exception.py  health_exception.py  sample_exception.py
src/models/: __init__.py  sample_model.py
src/repositories/: __init__.py  health_repository.py  sample_repository.py
src/routers/: __init__.py  health_router.py  sample_router.py
src/schemas/: __init__.py  page_schema.py  response_schema.py
src/services/: __init__.py  sample_service.py
